# Md-Reader

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.ps1
src/: App.css  App.tsx  main.tsx  types.ts  welcome.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmModal.tsx  FileMenu.tsx  FloatingToolbar.tsx  Icons.tsx  ImageResizeOverlay.tsx  LinkPopover.tsx  PdfExportModal.tsx  SlashMenu.tsx  SourceView.tsx  Toolbar.tsx  Tweaks.tsx  TweaksPanel.tsx  WindowControls.tsx  WysiwygEditor.tsx
src/data/: sampleFiles.ts
src/lib/: fileIo.ts  htmlToMarkdown.ts  useSourceEditing.ts  useSourceUndo.ts  useUpdater.ts
src/markdown/: normalize.ts  render.tsx  source.tsx  sourceDom.ts
src/slash/: commands.ts  math.ts  runners.ts  useSlashCommand.ts
